--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dot-grid",
-  "version": "1.0.0",
+  "name": "@lobergdesign/dot-grid",
+  "version": "1.0.4",
   "description": "A modern, flexible 12-column CSS Grid system with container queries, fluid layouts, and subgrid support",
   "main": "dist/grid.css",
   "style": "dist/grid.css",
@@ -19,7 +19,9 @@
     "dist",
     "src",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "purgecss.config.js",
+    ".purgecssrc.json"
   ],
   "scripts": {
     "build": "npm run build:css && npm run build:min",
@@ -41,7 +43,8 @@
     "scss",
     "modern-css",
     "utilities",
-    "dot-grid"
+    "dot-grid",
+    "@lobergdesign/dot-grid"
   ],
   "author": "Jean Loberg",
   "license": "MIT",
@@ -54,7 +57,8 @@
   },
   "homepage": "https://github.com/lobergdesign/dot-grid#readme",
   "devDependencies": {
-    "sass": "^1.80.0"
+    "sass": "^1.80.0",
+    "np": "^10.2.0"
   },
   "engines": {
     "node": ">=14.0.0"
